tests/frontend_tests/error_tokens_in_array_size.c
int main() {
  // error: unexpected token in array size after '3'
  int a[3 int];
}
